<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open"
        android:title="@string/action_open"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_toc"
        android:icon="@drawable/ic_toc"
        android:title="@string/action_toc"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_toggle"
        android:icon="@drawable/ic_code"
        android:title="@string/action_view_code"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/action_history"
        app:showAsAction="never" />
</menu>
